--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -1,12 +1,14 @@
-<form (ngSubmit)="onSubmit()">
+<form>
   <div>
     <input
       type="text"
       id="text"
       placeholder="Search"
+      class="px-3 py-2 placeholder-gray-500 text-black rounded-sm ring-2 ring-gray-300 focus:ring-gray-500 focus:ring-2"
       style="border: 1px solid black"
       [(ngModel)]="search"
       name="text"
+      (keyup)="onSearch()"
     />
     <button type="submit">Search</button>
   </div>
