--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -40,5 +40,8 @@
         <span class="material-icons">add_box</span>
       </button>
     </td>
+    <td class="p-2">{{ book.availableQuantity }}</td>
+    <!--    <td class="p-2">{{ signatureQuantity(book) }}</td>-->
+    <td class="p-2"></td>
   </tr>
 </table>
