--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -20,7 +20,7 @@
     <th class="font-medium p-2 text-left">Title</th>
     <th class="font-medium p-2 text-left">Author</th>
     <th class="font-medium p-2 text-left">Genre</th>
-    <th class="font-medium p-2 text-left">Borrowed</th>
+    <th class="font-medium p-2 text-left">Available</th>
     <th class="font-medium p-2 text-left">Quantity</th>
   </tr>
   <tr class="border-b hover:bg-gray-50" *ngFor="let book of books">
