--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -7,7 +7,7 @@
   <nav class="">
     <ul class="flex">
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Reserved</a></li>
+      <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Reserved</a></li>
