--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -32,9 +32,9 @@
     </td>
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">{{ book.availableQuantity }}</td>
-    <td class="p-2">{{ signatureQuantity(book) }}</td>
+    <td class="p-2">{{ getSignatureQuantity(book) }}</td>
     <td class="p-2">
-      <button *ngIf="book.availableQuantity > 0" (click)="reserveBookByUser(book)">
+      <button *ngIf="book.availableQuantity > 0" (click)="PostReservedBookByUser(book)">
         <span class="material-icons">add_box</span>
       </button>
     </td>
