--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -38,5 +38,10 @@
         <span class="material-icons">add_box</span>
       </button>
     </td>
+    <td class="p-2">
+      <button (click)="goToList()">
+        <span class="material-icons">add_box</span>
+      </button>
+    </td>
   </tr>
 </table>
