--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -28,18 +28,15 @@
     <td class="p-2">{{ book.id }}</td>
     <td class="p-2">{{ book.title }}</td>
     <td class="p-2">
-      <span *ngFor="let author of book.authors">{{ author.firstName }} {{ author.lastName }}, </span>
+      <span *ngFor="let author of book.authors"
+        ><p>{{ author.firstName }} {{ author.lastName }}<br /></p
+      ></span>
     </td>
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">{{ book.availableQuantity }}</td>
     <td class="p-2">{{ getSignatureQuantity(book) }}</td>
     <td class="p-2">
-      <button *ngIf="book.availableQuantity > 0" (click)="PostReservedBookByUser(book)">
-        <span class="material-icons">add_box</span>
-      </button>
-    </td>
-    <td class="p-2">
-      <button (click)="goToList()">
+      <button *ngIf="book.availableQuantity > 0" (click)="postReservedBookByUser(book)">
         <span class="material-icons">add_box</span>
       </button>
     </td>
