#Zakładka 5 - added admin-reserved

--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -10,7 +10,7 @@
       <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Reserved</a></li>
+      <li><a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a></li>
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
     </ul>
