#4 - dodanie wyświetlania listy dla Admina

--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -9,7 +9,7 @@
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>
       <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>
       <li><a class="nav-item" routerLink="borrowed-date" routerLinkActive="active">Borrowed</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>
+      <li><a class="nav-item" routerLink="admin-panel" routerLinkActive="active">Admin List</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Reserved</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a></li>
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
