#4 - wyświetlanie listy dla admina razem z pogrupowaniem na kolory i sortowaniem zależnym od statusu

--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -38,5 +38,7 @@
     >
       {{ DTO.status }}
     </td>
+    <td class="p-2">editbutton</td>
+    <td class="p-2">deletebutton</td>
   </tr>
 </table>
