--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -1,4 +1,6 @@
-<form>tutaj będzie przycisk do dodawania nowej książki po prawej stronie</form>
+<form>
+  <button class="float-right" (click)="openAddBookModal()">Add Book</button>
+</form>
 
 <table class="w-full">
   <tr class="border-b-2 border-gray-400">
@@ -38,7 +40,7 @@
     >
       {{ DTO.status }}
     </td>
-    <td class="p-2">editbutton</td>
-    <td class="p-2">deletebutton</td>
+    <td class="p-2"><button (click)="editBook(DTO)">Edit</button></td>
+    <td class="p-2"><button (click)="deleteBook(DTO)">Delete</button></td>
   </tr>
 </table>
