--- a/src/main/webapp/src/app/page/borrowed-list/borrowed-list.component.html
+++ b/src/main/webapp/src/app/page/borrowed-list/borrowed-list.component.html
@@ -6,7 +6,7 @@
 
 <table class="w-full">
   <tr class="border-b-2 border-gray-400">
-    <th class="font-medium p-2 text-left">Id</th>
+    <!--    <th class="font-medium p-2 text-left">Id</th>-->
     <th class="font-medium p-2 text-left">Title</th>
     <!--    <th class="font-medium p-2 text-left">Author</th>-->
     <!--    <th class="font-medium p-2 text-left">Genre</th>-->
@@ -15,7 +15,7 @@
     <th class="font-medium p-2 text-left">Status</th>
   </tr>
   <tr class="border-b hover:bg-gray-50" *ngFor="let book of borrowedBook">
-    <td class="p-2">{{ book.bookId }}</td>
+    <!--    <td class="p-2">{{ book.bookId }}</td>-->
     <td class="p-2">{{ book.title }}</td>
     <!--    <td class="p-2">-->
     <!--      <span *ngFor="let author of book.authors"-->
