#Zakładka 5 - fixed bugs

--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -24,8 +24,8 @@
     <th class="font-medium p-2 text-left">Quantity</th>
     <th class="font-medium p-2 text-left">Reserve</th>
   </tr>
-  <tr class="border-b hover:bg-gray-50" *ngFor="let book of books">
-    <td class="p-2">{{ book.id }}</td>
+  <tr class="border-b hover:bg-gray-50" *ngFor="let book of books; let i = index">
+    <td class="p-2">{{ i + 1 }}</td>
     <td class="p-2">{{ book.title }}</td>
     <td class="p-2">
       <span *ngFor="let author of book.authors"
