#Zakładka 5 - fixed bugs

--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -16,7 +16,7 @@
 
 <table class="w-full">
   <tr class="border-b-2 border-gray-400">
-    <th class="font-medium p-2 text-left">Id</th>
+    <th class="font-medium p-2 text-left">Nr</th>
     <th class="font-medium p-2 text-left">Title</th>
     <th class="font-medium p-2 text-left">Author</th>
     <th class="font-medium p-2 text-left">Genre</th>
