--- a/src/main/webapp/src/app/page/reserved/reserved.component.html
+++ b/src/main/webapp/src/app/page/reserved/reserved.component.html
@@ -1,13 +1,13 @@
 <table class="w-full">
   <tr class="border-b-2 border-gray-400">
-    <th class="font-medium p-2 text-left">Id</th>
+    <th class="font-medium p-2 text-left">Nr</th>
     <th class="font-medium p-2 text-left">Title</th>
     <th class="font-medium p-2 text-left">Author</th>
     <th class="font-medium p-2 text-left">Genre</th>
     <th class="font-medium p-2 text-left">Cancel</th>
   </tr>
-  <tr class="border-b hover:bg-gray-50" *ngFor="let book of books">
-    <td class="p-2">{{ book.id }}</td>
+  <tr class="border-b hover:bg-gray-50" *ngFor="let book of books; let i = index">
+    <td class="p-2">{{ i + 1 }}</td>
     <td class="p-2">{{ book.title }}</td>
     <td class="p-2">
       <span *ngFor="let author of book.authors"
