#Zakładka 5 - added hiding buttons and tabs depended of logged user

--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -1,8 +1,30 @@
+<div style="width: 80%; margin: auto">
+  Wyświetlanie odpowiednich zakładek w zależności od roli, będzie włączone jak będę znał rolę różnych użytkowników
+</div>
+
 <header class="flex items-center">
   <div class="font-medium py-2 px-4 text-xl flex items-center mr-4">
     <span class="material-icons-round mr-2">auto_stories</span>
     <span>{{ title }}</span>
   </div>
+
+  <!--  <nav class="">-->
+  <!--    <ul class="flex">-->
+  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>-->
+  <!--      <li><a *ngIf="user?.role === 0" class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>-->
+  <!--      <li><a *ngIf="user?.role === 0" class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>-->
+  <!--      <li><a *ngIf="user?.role === 2" class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>-->
+  <!--      <li>-->
+  <!--        <a *ngIf="user?.role === 2" class="nav-item" routerLink="admin-reserved" routerLinkActive="active"-->
+  <!--          >Admin Reserved</a-->
+  <!--        >-->
+  <!--      </li>-->
+  <!--      <li>-->
+  <!--        <a *ngIf="user?.role === 2" class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>-->
+  <!--      </li>-->
+  <!--      <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>-->
+  <!--    </ul>-->
+  <!--  </nav>-->
 
   <nav class="">
     <ul class="flex">
@@ -10,8 +32,12 @@
       <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>
-      <li><a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a></li>
+      <li>
+        <a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a>
+      </li>
+      <li>
+        <a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>
+      </li>
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
     </ul>
   </nav>
