--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -22,7 +22,7 @@
     <th class="font-medium p-2 text-left">Genre</th>
     <th class="font-medium p-2 text-left">Available</th>
     <th class="font-medium p-2 text-left">Quantity</th>
-    <th class="font-medium p-2 text-left">Reserve</th>
+    <th *ngIf="user?.role === 0" class="font-medium p-2 text-left">Reserve</th>
   </tr>
   <tr class="border-b hover:bg-gray-50" *ngFor="let book of books; let i = index">
     <td class="p-2">{{ i + 1 }}</td>
@@ -35,8 +35,15 @@
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">{{ book.availableQuantity }}</td>
     <td class="p-2">{{ getSignatureQuantity(book) }}</td>
+
+    <!--    <td class="p-2">-->
+    <!--      <button *ngIf="book.availableQuantity > 0" (click)="postReservedBookByUser(book)">-->
+    <!--        <span class="material-icons">add_box</span>-->
+    <!--      </button>-->
+    <!--    </td>-->
+
     <td class="p-2">
-      <button *ngIf="book.availableQuantity > 0" (click)="postReservedBookByUser(book)">
+      <button *ngIf="book.availableQuantity > 0 && user?.role === 0" (click)="postReservedBookByUser(book)">
         <span class="material-icons">add_box</span>
       </button>
     </td>
