#Zakładka 5 - added hardcoded akielar as admin

--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -8,39 +8,61 @@
     <span>{{ title }}</span>
   </div>
 
-  <!--  <nav class="">-->
-  <!--    <ul class="flex">-->
-  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>-->
-  <!--      <li><a *ngIf="user?.role === 0" class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>-->
-  <!--      <li><a *ngIf="user?.role === 0" class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>-->
-  <!--      <li><a *ngIf="user?.role === 2" class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>-->
-  <!--      <li>-->
-  <!--        <a *ngIf="user?.role === 2" class="nav-item" routerLink="admin-reserved" routerLinkActive="active"-->
-  <!--          >Admin Reserved</a-->
-  <!--        >-->
-  <!--      </li>-->
-  <!--      <li>-->
-  <!--        <a *ngIf="user?.role === 2" class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>-->
-  <!--      </li>-->
-  <!--      <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>-->
-  <!--    </ul>-->
-  <!--  </nav>-->
-
   <nav class="">
     <ul class="flex">
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>
-      <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>
-      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>
       <li>
-        <a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a>
+        <a
+          *ngIf="user?.role === 0 && user?.username !== 'akielar'"
+          class="nav-item"
+          routerLink="reserved"
+          routerLinkActive="active"
+          >Reserved</a
+        >
       </li>
       <li>
-        <a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>
+        <a
+          *ngIf="user?.role === 0 && user?.username !== 'akielar'"
+          class="nav-item"
+          routerLink="list"
+          routerLinkActive="active"
+          >Borrowed</a
+        >
+      </li>
+      <li>
+        <a *ngIf="user?.username === 'akielar'" class="nav-item" routerLink="list" routerLinkActive="active"
+          >Admin List</a
+        >
+      </li>
+      <li>
+        <a *ngIf="user?.username === 'akielar'" class="nav-item" routerLink="admin-reserved" routerLinkActive="active"
+          >Admin Reserved</a
+        >
+      </li>
+      <li>
+        <a *ngIf="user?.username === 'akielar'" class="nav-item" routerLink="list" routerLinkActive="active"
+          >Admin Borrowed</a
+        >
       </li>
       <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>
     </ul>
   </nav>
+
+  <!--  <nav class="">-->
+  <!--    <ul class="flex">-->
+  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>-->
+  <!--      <li><a class="nav-item" routerLink="reserved" routerLinkActive="active">Reserved</a></li>-->
+  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Borrowed</a></li>-->
+  <!--      <li><a class="nav-item" routerLink="list" routerLinkActive="active">Admin List</a></li>-->
+  <!--      <li>-->
+  <!--        <a class="nav-item" routerLink="admin-reserved" routerLinkActive="active">Admin Reserved</a>-->
+  <!--      </li>-->
+  <!--      <li>-->
+  <!--        <a class="nav-item" routerLink="list" routerLinkActive="active">Admin Borrowed</a>-->
+  <!--      </li>-->
+  <!--      <li><a class="nav-item" routerLink="about" routerLinkActive="active">About</a></li>-->
+  <!--    </ul>-->
+  <!--  </nav>-->
 
   <div class="flex-1"></div>
 
