--- a/src/main/webapp/src/app/page/list/list.component.html
+++ b/src/main/webapp/src/app/page/list/list.component.html
@@ -35,16 +35,9 @@
     <td class="p-2">{{ book.genre }}</td>
     <td class="p-2">{{ book.availableQuantity }}</td>
     <td class="p-2">{{ getSignatureQuantity(book) }}</td>
-
-    <!--    <td class="p-2">-->
-    <!--      <button *ngIf="book.availableQuantity > 0" (click)="postReservedBookByUser(book)">-->
-    <!--        <span class="material-icons">add_box</span>-->
-    <!--      </button>-->
-    <!--    </td>-->
-
     <td class="p-2">
       <button
-        *ngIf="book.availableQuantity > 0 && user?.role === 0 && book.title !== 'Reserved'"
+        *ngIf="book.availableQuantity > 0 && user?.role === 0 && book.bookStatusForUser !== 'Reserved'"
         (click)="postReservedBookByUser(book)"
       >
         <span class="material-icons">add_box</span>
