--- a/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/admin-panel.component.html
@@ -1,5 +1,18 @@
 <form>
-  <button class="float-right" (click)="openAddBookModal()">Add Book</button>
+  <!--  <button class="float-right" (click)="openAddBookModal()">Add Book</button>-->
+  <div>
+    <input
+      type="text"
+      id="text"
+      placeholder="Search"
+      class="px-3 py-2 placeholder-gray-500 text-black rounded-sm ring-2 ring-gray-300 focus:ring-gray-500 focus:ring-2"
+      style="border: 1px solid black"
+      [(ngModel)]="search"
+      name="text"
+      (keyup)="onSearch()"
+    />
+    <button type="submit"></button>
+  </div>
 </form>
 
 <table class="w-full">
