--- a/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
+++ b/src/main/webapp/src/app/page/admin-panel/add-book-modal/add-book-modal.component.html
@@ -1,41 +1,71 @@
-<div class="modal-header">
-  <h4 class="modal-title">{{ title }}</h4>
-  <button type="button" class="close" aria-label="Close" (click)="activeModal.dismiss()">
-    <span aria-hidden="true">&times;</span>
-  </button>
-</div>
-<div class="modal-body">
-  <form #addBookForm="ngForm" (ngSubmit)="addNewBook(addBookForm)">
-    <div class="form-group">
-      <label for="title">Title</label>
-      <input type="text" class="form-control" id="title" name="title" required [(ngModel)]="newBook.title" />
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Add New Book</button>
+
+<!-- Modal -->
+<div
+  class="modal fade"
+  id="exampleModal"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Add New Book</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Enter book title" />
+          </div>
+          <div class="form-group">
+            <label for="pages">Pages</label>
+            <input type="number" class="form-control" id="pages" placeholder="Enter number of pages" />
+          </div>
+          <div class="form-group">
+            <label for="genre">Genre</label>
+            <input type="text" class="form-control" id="genre" placeholder="Enter book genre" />
+          </div>
+          <div class="form-group">
+            <label for="quantity">Available Quantity</label>
+            <input type="number" class="form-control" id="quantity" placeholder="Enter available quantity" />
+          </div>
+          <div class="form-group">
+            <label for="firstName">Author First Name</label>
+            <input type="text" class="form-control" id="firstName" placeholder="Enter author first name" />
+          </div>
+          <div class="form-group">
+            <label for="lastName">Author Last Name</label>
+            <input type="text" class="form-control" id="lastName" placeholder="Enter author last name" />
+          </div>
+          <div class="form-group">
+            <label for="gender">Author Gender</label>
+            <select class="form-control" id="gender">
+              <option value="male">Male</option>
+              <option value="female">Female</option>
+              <option value="other">Other</option>
+            </select>
+          </div>
+          <div class="form-group">
+            <label for="birthDate">Author Birth Date</label>
+            <input type="date" class="form-control" id="birthDate" />
+          </div>
+          <div class="form-group">
+            <label for="bookSignature">Book Signature</label>
+            <input type="text" class="form-control" id="bookSignature" placeholder="Enter book signature" />
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary" (click)="addBook()">Add Book</button>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="authors">Author</label>
-      <input type="text" class="form-control" id="authors" name="authors" required [(ngModel)]="newBook.authors" />
-    </div>
-    <div class="form-group">
-      <label for="pages">Pages</label>
-      <input type="number" class="form-control" id="pages" name="pages" required [(ngModel)]="newBook.pages" />
-    </div>
-    <div class="form-group">
-      <label for="genre">Genre</label>
-      <input type="text" class="form-control" id="genre" name="genre" required [(ngModel)]="newBook.genre" />
-    </div>
-    <div class="form-group">
-      <label for="signature">Signature</label>
-      <input
-        type="text"
-        class="form-control"
-        id="signature"
-        name="signature"
-        required
-        [(ngModel)]="newBook.signature"
-      />
-    </div>
-    <div class="modal-footer">
-      <button type="submit" class="btn btn-primary">Add</button>
-      <button type="button" class="btn btn-secondary" (click)="activeModal.dismiss()">Cancel</button>
-    </div>
-  </form>
+  </div>
 </div>
