#Zakładka 5 - added Role LIBRARIAN

--- a/src/main/webapp/src/app/page/admin-reserved/admin-reserved.component.html
+++ b/src/main/webapp/src/app/page/admin-reserved/admin-reserved.component.html
@@ -35,10 +35,11 @@
     </ng-template>
 
     <td class="p-2" *ngIf="DTO.status !== 'reserved'; else reserved">
-      <button (click)="postBorrowReservedSignatureByUser(DTO)">
+      <button (click)="postBorrowReservedSignatureByUser(DTO)" [disabled]="isButtonDisabled">
         <span class="material-icons">add_box</span>
       </button>
     </td>
+
     <ng-template #reserved>
       <td class="p-2"></td>
     </ng-template>
