--- a/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
+++ b/src/main/webapp/src/app/ui/top-bar/top-bar.component.html
@@ -1,7 +1,3 @@
-<div style="width: 80%; margin: auto">
-  Wyświetlanie odpowiednich zakładek w zależności od roli, będzie włączone jak będę znał rolę różnych użytkowników
-</div>
-
 <header class="flex items-center">
   <div class="font-medium py-2 px-4 text-xl flex items-center mr-4">
     <span class="material-icons-round mr-2">auto_stories</span>
@@ -13,7 +9,7 @@
       <li><a class="nav-item" routerLink="list" routerLinkActive="active">List</a></li>
       <li>
         <a
-          *ngIf="user?.role === 0 && user?.username !== 'akielar'"
+          *ngIf="user?.role === 0 || user?.role === 4 || user?.username !== null"
           class="nav-item"
           routerLink="reserved"
           routerLinkActive="active"
@@ -21,11 +17,7 @@
         >
       </li>
       <li>
-        <a
-          *ngIf="user?.role === 0 && user?.username !== 'akielar'"
-          class="nav-item"
-          routerLink="list"
-          routerLinkActive="active"
+        <a *ngIf="user?.role === 0 || user?.role === 4" class="nav-item" routerLink="list" routerLinkActive="active"
           >Borrowed</a
         >
       </li>
