#Zakładka 5 - Refactor typos

--- a/src/main/webapp/src/app/page/admin-reserved/admin-reserved.component.html
+++ b/src/main/webapp/src/app/page/admin-reserved/admin-reserved.component.html
@@ -45,7 +45,7 @@
     </ng-template>
 
     <td class="p-2">
-      <button (click)="postCancelReservedSignatureByUser(DTO)">
+      <button (click)="postCancelReservedSignatureByUser(DTO)" [disabled]="isButtonDisabled">
         <span class="material-icons">disabled_by_default</span>
       </button>
     </td>
